Add minor edits to Name class